--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@ function update(){
  //ctx.font = "40px Arial"; // this is how you make differnet texts with differnet sizes using save and resotre 
  ctx.fillText("health:" + player.health, 0 ,490); 
  // ctx.restore(); 
-  ctx.fillText("score:" + score, 300 ,490); 
+  ctx.fillText("Osama is Noob:" + score, 300 ,490); 
  for ( var key in enemyList ) {
  
  updatePosition (enemyList[key]) 
