--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
 <head>
 <title> Anas </title > 
 <link rel="icon" href="A.png">
+
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-122075476-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-122075476-1');
+</script>
+
+
 </head>
 
 <body>
