--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
   gtag('config', 'UA-122075476-1');
 </script>
 
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-8853165879778444",
+    enable_page_level_ads: true
+  });
+</script>
 
 </head>
 
